@@ -38,7 +38,7 @@ cfnewspaper_la_CPSOURCES = cfnewspaper.c
 
 cfnewspaper_la_LIBADD = -lsqlite3
 cfnewspaper_la_LDFLAGS = -module -avoid-version -Xlinker -export-dynamic -rdynamic -Xlinker -Bsymbolic
-AM_CPPFLAGS = -I$(srcdir)/include -I../common/include -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(srcdir)/include -I$(srcdir)/../common/include -I$(top_srcdir)/include
 
 proto:
 	cproto -D__CEXTRACT__ -o include/cfnewspaper_proto.h $(CPPFLAGS) $(AM_CPPFLAGS) \
