@@ -31,7 +31,7 @@ citylife_la_SOURCES = citylife.c\
 
 citylife_la_LIBADD =
 citylife_la_LDFLAGS = -module -avoid-version -Xlinker -export-dynamic -rdynamic -Xlinker -Bsymbolic
-AM_CPPFLAGS = -I$(srcdir)/include -I../common/include -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(srcdir)/include -I$(srcdir)/../common/include -I$(top_srcdir)/include
 
 proto:
 	cproto -D__CEXTRACT__ -o include/citylife_proto.h $(CPPFLAGS) $(AM_CPPFLAGS) \
